# omp-task

./: CMakeLists.txt  CPackConfig.cmake  README.md
source/: daemon_logger.cpp  log_entry.cpp  log_entry.hpp  preload_logger.cpp  shared_buffer.cpp  shared_buffer.hpp
